# verge-scraper

./: Procfile  README.md  WEBSITES.md  pyproject.toml  requirements.txt  test_scraper.py
verge_scraper/: app.py  scraper.py
verge_scraper/templates/: index.html
