[tool.poetry]
name = "verge_scraper"
version = "0.1.0"
description = ""
authors = ["Maksim Skobun <max@skobun.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.1"
bs4 = "^0.0.2"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
